# sleepmask-vs

./: CMakeLists.txt  README.md  sleepmask-vs.sln  sleepmask.cna
sleep/: config.cna  dialog.cna  utils.cna
sleepmask-vs/: debug.h  default-sleepmask.cpp  draugr-sleepmask.cpp  indirectsyscalls-sleepmask.cpp  retaddrspoofing-sleepmask.cpp  sleepmask-vs.h  sleepmask-vs.vcxproj  sleepmask-vs.vcxproj.filters  threadpool-sleepmask.cpp  unit-test-bof.cpp
